src/eleventy/content/_includes/v25.4/misc/table-storage-parameters.md
|                         Parameter name                         |                                                                                                                                                                                                                                                Description                                                                                                                                                                                                                                                | Data type | Default value |
|----------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----------|---------------|
| `exclude_data_from_backup`                                     | Exclude the data in this table from any future backups.                                                                                                                                                                                                                                                                                                                                                                                                                                                   | Boolean   | `false`       |
| <a name="storage-parameter-schema-locked"></a> `schema_locked` | Disallow [schema changes]({% link "{{ page.version.version }}/online-schema-changes.md" %}) on this table. Enabling `schema_locked` can help [improve performance of changefeeds]({% link "{{ page.version.version }}/create-changefeed.md" %}#disallow-schema-changes-on-tables-to-improve-changefeed-performance) running on this table.                                                                                                                                                                    | Boolean   | `false`       |
| `sql_stats_automatic_collection_enabled`                       | Enable [automatic statistics collection]({% link "{{ page.version.version }}/cost-based-optimizer.md" %}#enable-and-disable-automatic-statistics-collection-for-tables) for this table.                                                                                                                                                                                                                                                                                                                     | Boolean   | `true`        |
| `sql_stats_automatic_collection_min_stale_rows`                | Minimum number of stale rows in this table that will trigger a statistics refresh.                                                                                                                                                                                                                                                                                                                                                                                                                        | Integer   | 500           |
| `sql_stats_automatic_collection_fraction_stale_rows`           | Fraction of stale rows in this table that will trigger a statistics refresh.                                                                                                                                                                                                                                                                                                                                                                                                                              | Float     | 0.2           |
| `sql_stats_forecasts_enabled`                                  | Enable [forecasted statistics]({% link "{{ page.version.version }}/show-statistics.md" %}#display-forecasted-statistics) collection for this table.                                                                                                                                                                                                                                                                                                                                                         | Boolean   | `true`        |
| `infer_rbr_region_col_using_constraint`                        | For [`REGIONAL BY ROW`]({% link "{{ page.version.version }}/table-localities.md" %}#regional-by-row-tables) tables, automatically populate the hidden `crdb_region` column on `INSERT`, `UPDATE`, and `UPSERT` by looking up the region of the referenced parent row. Set this parameter to the name of a [foreign key]({% link "{{ page.version.version }}/foreign-key.md" %}) constraint on the table that includes the `crdb_region` column. The foreign key cannot be dropped while the parameter is set. | String    | `NULL`        |

The following parameters are included for PostgreSQL compatibility and do not affect how CockroachDB runs:

- `autovacuum_enabled`
- `fillfactor`

For the list of storage parameters that affect how [Row-Level TTL]({% link "{{ page.version.version }}/row-level-ttl.md" %}) works, see the list of [TTL storage parameters]({% link "{{ page.version.version }}/row-level-ttl.md" %}#ttl-storage-parameters).
